--- a/modules/frontend-web-portal/src/main/resources/templates/applicant/header.html
+++ b/modules/frontend-web-portal/src/main/resources/templates/applicant/header.html
@@ -51,8 +51,8 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Trang chủ</a></li>
-					<li class="serviceinfo active"><a href="#">Thủ tục hành chính</a></li>
+					<li class="active"><a href="#">Trang chủ</a></li>
+					<li><a href="#">Thủ tục hành chính</a></li>
 					<li><a href="#">Thống kê số liệu</a></li>
 					<li><a href="#">Đánh giá mức độ hài lòng</a></li>
 					<li class="register"><a href="#">Đăng ký</a></li>
@@ -62,4 +62,4 @@
 	</nav>
 
 	<article id="main-content">
-		<div class="container container-all">
+		<div class="container-fluid">
