--- a/style-component/css/modern_component.css
+++ b/style-component/css/modern_component.css
@@ -138,9 +138,13 @@
   border-color: #14bef0;
   border-width: 2px;
 }
+.radio input[type="radio"]:checked + label:before, .radio-inline input[type="radio"]:checked + label:before {
+  border: 0;
+}
 .radio input[type="radio"]:checked + label:after, .radio-inline input[type="radio"]:checked + label:after {
   content: "\f111";
   left: 0;
+  top: 54%;
   font-size: 17px;
   color: #14bef0;
 }
@@ -238,23 +242,27 @@ ul.ul-list a i {
 input[type="text"]::-webkit-input-placeholder,
 input[type="password"]::-webkit-input-placeholder {
   color: #ccc;
+  font-size: 13px;
 }
 
 input[type="text"]:-moz-placeholder,
 input[type="password"]:-moz-placeholder {
   color: #ccc;
   opacity: 1;
+  font-size: 13px;
 }
 
 input[type="text"]::-moz-placeholder,
 input[type="password"]::-moz-placeholder {
   color: #ccc;
   opacity: 1;
+  font-size: 13px;
 }
 
 input[type="text"]:-ms-input-placeholder,
 input[type="password"]:-ms-input-placeholder {
   color: #ccc;
+  font-size: 13px;
 }
 
 /*----- Input text + password -----*/
@@ -313,7 +321,7 @@ input[type="text"]:focus, input[type="password"]:focus {
   color: #14bef0;
 }
 
-.text-blue {
+.text-blue, .text-hover-blue:hover {
   color: #0b72ba;
 }
 
@@ -471,8 +479,10 @@ input[type="text"]:focus, input[type="password"]:focus {
 /*------------------------------
       Other
 ------------------------------*/
+/*----- Titles -----*/
 .row-header {
   background-color: #e1e2e1;
+  overflow: hidden;
 }
 .row-header .group-icons {
   margin-left: auto;
@@ -504,7 +514,6 @@ input[type="text"]:focus, input[type="password"]:focus {
   background-color: #0b72ba;
   display: inline-block;
   padding: 3px;
-  font-size: 13px;
   width: 25px;
   text-align: right;
   color: white;
@@ -526,7 +535,6 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 .background-triangle-big {
   padding: 10px 5px 10px 15px;
-  font-size: 14px;
   width: auto;
   margin-right: 30px;
 }
