update modern css

--- a/style-component/css/modern_component.css
+++ b/style-component/css/modern_component.css
@@ -150,6 +150,16 @@
 }
 
 /*------------------------------
+      Label
+------------------------------*/
+.label-dvc-lv2 {
+  background-color: #e67e22;
+}
+.label-dvc-lv-3 {
+  background-color: #8e44ad;
+}
+
+/*------------------------------
       List style
 ------------------------------*/
 ul {
