--- a/style-component/css/override-kendoui.css
+++ b/style-component/css/override-kendoui.css
@@ -225,7 +225,7 @@ html .k-pager-input {
 }
 
 .mBody .k-state-focused {
-	border-color: #333;
+	border-color: #0b72ba;
 }
 .k-dropdown-wrap {
   border-radius: 4px;
