--- a/style-component/css/custom-style.css
+++ b/style-component/css/custom-style.css
@@ -66,6 +66,51 @@
 	white-space: nowrap;
 }
 
+.hp .account-section {
+	margin-left: auto;
+}
+.hp .account-section .notification-alert {
+	background-color: #eee;
+	padding: 3px 10px;
+	border-radius: 20px;
+	margin-right: 20px;
+	white-space: nowrap;
+}
+.hp .account-section .notification-alert span {
+	font-weight: bold;
+	color: #790000;
+}
+.hp .account-section .btn-reset {
+	color: #2a2a2a;
+}
+.hp .account-section .btn-reset:hover {
+	color: #14bef0;
+}
+.hp .account-section .btn-reset:focus {
+	outline: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+.hp .account-section .dropdown-menu {
+	left: auto;
+	right: 0;
+}
+.hp .account-section .dropdown-menu i {
+	color: #939393;
+}
+.hp .account-section .dropdown-menu a:hover {
+	background-color: transparent;
+	color: #790000;
+}
+.hp .account-section .dropdown-menu a:hover i {
+	color: #790000;
+}
+.hp .account-section img {
+	width: 40px;
+	height: 40px;
+	margin: 0;
+}
+
 
 
 /*----- Popup Notification -----*/
@@ -128,6 +173,156 @@ html .modal-open .modal-header ~ div form {
 	max-height: -webkit-calc(100vh - 145px);
     max-height: calc(100vh - 145px);
     overflow: auto;
+}
+
+
+
+/*----- Search Homepage -----*/
+
+/* Searchbar */
+.searchbar {
+	margin-top: 70px;
+}
+.searchbar .input-group {
+	margin-top: 20px;
+}
+.searchbar input {
+	height: 50px;
+	border-radius: 30px;
+    border-color: #14bef0;
+	padding: 0 25px;
+}
+.searchbar button {
+	height: 50px;
+	border-radius: 0 30px 30px 0;
+	width: 80px;
+	font-size: 18px;
+	background-color: #14bef0;
+	color: white;
+	border-color: #14bef0;
+	padding-top: 10px;
+}
+.searchbar button:hover {
+	background-color: #0b72ba;
+	color: white;
+	border-color: #0b72ba;
+}
+.searchbar input:focus {
+	border-color: #14bef0;
+}
+
+/* Img below */
+#imgDomains {
+	margin-top: 40px;
+}
+#imgDomains .imgDomains {
+	position: relative;
+}
+#imgDomains .img-domains div {
+	position: absolute;
+	top: 0;
+	left: 15px;
+	right: 15px;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.4);
+	color: white;
+	font-size: 18px;
+	opacity: 0;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+#imgDomains .img-domains div:hover {
+	opacity: 1;
+}
+#imgDomains .img-domains p {
+	margin-bottom: 0;
+}
+#imgDomains .img-domains span {
+	display: block;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+
+
+/*----- List dossier Homepage -----*/
+.dossier-with-result {
+	background-color: #0d7bcf;
+	overflow: hidden;
+	color: white;
+	border-radius: 8px;
+	max-width: 330px;
+	float: right;
+	margin-top: 15px;
+}
+.dossier-with-result .title {
+	display: block;
+	border-bottom: 3px solid #86BDE7;
+	padding: 15px 0 10px 30px;
+	background: url("../images/bg-dwr.png") not-repeat left center;
+}
+.dossier-with-result ul span {
+	font-size: 13px;
+}
+
+/* Search */
+.dossier-with-result .button-holder {
+	margin: 0;
+}
+.dossier-with-result .button-holder > div:last-child {
+	padding-left: 0;
+}
+.dossier-with-result button {
+	background-color: transparent;
+	border: 1px solid white;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	width: 100%;
+}
+.dossier-with-result button:hover {
+	background-color: white;
+	color: #0d7bcf;
+}
+
+/* Pagination */
+.dossier-with-result .k-pager-wrap {
+	margin-bottom: 0px;
+}
+html .dossier-with-result .k-pager-wrap > .k-link {
+	min-width: inherit;
+	height:  auto;
+	line-height: normal;
+	border: 0;
+}
+html .dossier-with-result .k-pager-numbers {
+	margin: 0 1px 0 3px
+}
+.dossier-with-result .k-pager-numbers .k-link {
+	min-width: inherit;
+	line-height: normal;
+	border: 0;
+	padding: 0 2px;
+	background-color: transparent;
+	font-size: 11px;
+}
+.dossier-with-result a.k-link {
+	opacity: 0.5;
+}
+.dossier-with-result a.k-link:hover {
+	opacity: 1;
+}
+.dossier-with-result .k-pager-numbers .k-link:hover, 
+.dossier-with-result .k-pager-wrap > a:hover, 
+.dossier-with-result .k-pager-wrap > a .k-icon:hover {
+	background-color: transparent;
+}
+.dossier-with-result .k-pager-numbers .k-link:focus, 
+.dossier-with-result .k-pager-wrap > a:focus {
+	outline: none;
+}
+.dossier-with-result .k-pager-wrap > a:first-child, 
+.dossier-with-result .k-pager-wrap > a:last-child {
+	display: none;
 }
 
 
