--- a/style-component/css/modern_component.css
+++ b/style-component/css/modern_component.css
@@ -152,11 +152,17 @@
 /*------------------------------
       Label
 ------------------------------*/
+.label-dvc-lv1 {
+  background-color: #f1c40f;
+}
 .label-dvc-lv2 {
   background-color: #e67e22;
 }
 .label-dvc-lv-3 {
   background-color: #8e44ad;
+}
+.label-dvc-lv4 {
+  background-color: #9e0b0f;
 }
 
 /*------------------------------
@@ -497,6 +503,14 @@ input[type="text"]:focus, input[type="password"]:focus {
   margin: 0 -1px 0 0;
   border-radius: 0;
   border-bottom: 0;
+}
+.nav-tabs-wrapper .nav-tabs > li > a:hover:before {
+  content: "";
+  width: 100%;
+  border-bottom: 1px solid #14bef0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 .nav-tabs-wrapper .nav-tabs > li.active > a {
   border-color: #14bef0;
