--- a/modules/frontend-web-admin/src/main/resources/templates/header.html
+++ b/modules/frontend-web-admin/src/main/resources/templates/header.html
@@ -8,13 +8,34 @@
 	<link rel="stylesheet" href="../../../../../../style-component/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../../../../../style-component/css/kendo.common.core.min.css">
 	<link rel="stylesheet" href="../../../../../../style-component/css/override-kendoui.css">
+	
+	<link rel="stylesheet" href="http://v2.opencps.vn/o/mentions-web/css/mentions.css">
+	<link rel="stylesheet" href="http://v2.opencps.vn/o/dynamic-data-mapping-form-renderer/css/main.css">
+	<link rel="stylesheet" href="http://v2.opencps.vn/o/backend-theme/css/aui.css">
+
+
+
 	<script src="../../../../../../style-component/js/jquery-1.11.3.js"></script>
 	<script src="../../../../../../style-component/js/bootstrap.min.js"></script>
 	<script src="../../../../../../style-component/js/kendo.ui.core.min.js"></script>
 
+	<script src="../../../../../../style-component/js/main.js"></script>
+	<script src="../../../../../../style-component/js/mobilink.util.js"></script>
+	<script src="http://v2.opencps.vn/o/backend-theme/js/toastr.min.js"></script>
+	
+	
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+	
+
 	<!-- custom css, js -->
 	<link rel="stylesheet" href="../../../../../../style-component/css/style-components.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/custom.css">
+	<link rel="stylesheet" href="../../../../../../style-component/css/modern_custom.css">	
+	<link rel="stylesheet" href="../../../../../../style-component/css/modern_component.css">	
+	<link rel="stylesheet" href="http://v2.opencps.vn/o/backend-theme/css/_custom.scss">	
+
+	<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css" rel="stylesheet">
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
 </head>
 
 <body>
