--- a/modules/frontend-web-portal/src/main/resources/templates/profile/header.html
+++ b/modules/frontend-web-portal/src/main/resources/templates/profile/header.html
@@ -4,18 +4,20 @@
     <meta charset="utf-8">
     <title>Admin Theme</title>
 
-    <!-- library -->
     <link rel="stylesheet" href="../../../../../../../style-component/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../../../../../style-component/css/kendo.common.core.min.css">
     <link rel="stylesheet" href="../../../../../../../style-component/css/override-kendoui.css">
     <script src="../../../../../../../style-component/js/jquery-1.11.3.js"></script>
     <script src="../../../../../../../style-component/js/bootstrap.min.js"></script>
     <script src="../../../../../../../style-component/js/kendo.ui.core.min.js"></script>
-    <script src="../../../../../../../style-component/js/kendo.culture.vi-VN.js"></script>
 
     <!-- custom css, js -->
     <link rel="stylesheet" href="../../../../../../../style-component/css/modern_component.css">
     <link rel="stylesheet" href="../../../../../../../style-component/css/custom.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+
+        
 </head>
 
 <body>
