--- a/modules/frontend-web-customer/src/main/resources/templates/header.html
+++ b/modules/frontend-web-customer/src/main/resources/templates/header.html
@@ -14,13 +14,12 @@
 	<script src="../../../../../../style-component/js/jasny-bootstrap.min.js"></script>
 	<script src="../../../../../../style-component/js/custom.js"></script>
 
-	<!-- custom css, js -->
 	<link rel="stylesheet" href="../../../../../../style-component/css/modern_component.css">
-	<!-- <link rel="stylesheet" href="../../../../../../style-component/css/custom.css"> -->
 	<link href="../../../../../../style-component/css/modern_custom.css" rel="stylesheet">
-	<link rel="stylesheet" href="../../../../../../style-component/css/jasny-bootstrap.min.css">
+    <link rel="stylesheet" href="../../../../../../../style-component/css/custom.css">
+
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
 
 	<style type="text/css">
 		.dropdown-menu {
