--- a/modules/frontend-web-customer/src/main/resources/templates/header.html
+++ b/modules/frontend-web-customer/src/main/resources/templates/header.html
@@ -38,9 +38,9 @@
 
             <div class="account-section align-middle">
                 <div class="dropdown">
-                    <a href="javascript:;" class="notification-alert dropdown-toggle" id="btn-show-notification" data-toggle="dropdown" title="Thông báo của bạn">
+                    <a href="javascript:;" class="notification-alert dropdown-toggle" id="btn-show-notification" data-toggle="dropdown" title="Thông báo">
                         <i class="fa fa-bell-o" aria-hidden="true"></i>
-                        <span id="totalNotify" class="ML5">0</span>
+                        <span id="totalNotify" class="ML5"></span>
                     </a>
                     <#include "notificationTheme.ftl">
                 </div>
