--- a/modules/frontend-web-payment/src/main/resources/META-INF/resources/css/main.css
+++ b/modules/frontend-web-payment/src/main/resources/META-INF/resources/css/main.css
@@ -3,3 +3,10 @@
     border: 0;
     border-radius: 0;
  }
+ 
+.btn-view {
+    min-height: 38px;
+    box-shadow: none !important;
+    border-radius: 0px;
+    background-color: #4cbff1 !important;
+}
