--- a/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
+++ b/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
@@ -48,3 +48,32 @@ body .danhSachHoSoTable__class table.table th:nth-child(8) {
   width: 90px;
   padding-left: 8px;
 }
+
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(1) {
+  width: 40px;
+  padding-right: 0;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(2) {
+  width: 40px;
+  padding: 8px;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(3) {
+  width: 80px;
+  padding: 8px;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(4) {
+  width: 120px;
+  padding: 8px;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(5) {
+  width: 140px;
+  padding: 8px;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(6) {
+  width: 100px;
+  padding: 8px;
+}
+body .thongTinDoanhNghiepTable__class table.table th:nth-child(7) {
+  width: 100px;
+  padding: 8px;
+}
