--- a/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
+++ b/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
@@ -12,6 +12,26 @@ html .portlet-boundary_frontend_web_dossier_portlet_FrontendWebDossierPortlet_ .
     border: 0;
     margin: 0;
 }
+
+.menu__activator {
+    width: 100%;
+}
+.mt--5 {
+	margin-top: -5px;
+}
+
+.address--height .input-group__input {
+	height: 105px;
+}
+
+.input-group__error {
+    display: none;
+}
+
+.opencps-dossier-part-style .expansion-panel__body .expansion-panel__container .header__icon {
+	display: none;
+}
+
 table.table thead th {
     white-space: normal !important;
 }
@@ -54,7 +74,7 @@ body .thongTinDoanhNghiepTable__class table.table th:nth-child(1) {
   padding-right: 0;
 }
 body .thongTinDoanhNghiepTable__class table.table th:nth-child(2) {
-  width: 40px;
+  width: 120px;
   padding: 8px;
 }
 body .thongTinDoanhNghiepTable__class table.table th:nth-child(3) {
