front end dossier advanced search + ky so possition

--- a/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
+++ b/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
@@ -32,6 +32,11 @@ html .portlet-boundary_frontend_web_dossier_portlet_FrontendWebDossierPortlet_ .
 	display: none;
 }
 
+.no-wrap .input-group--select .input-group__selections__comma{
+    font-size: 13px;
+    white-space: nowrap;
+}
+
 table.table thead th {
     white-space: normal !important;
 }
