--- a/wars/bvh-theme-homepage/src/main/webapp/css/custom-style.css
+++ b/wars/bvh-theme-homepage/src/main/webapp/css/custom-style.css
@@ -716,17 +716,18 @@ section#main-content .dropdown .dropdown-menu li {
 }
 .dvcbvh .portlet-title-text {
 	font-size: 16px;
-	font-weight: bold;
-	color: #0054a6;
-	font-style: italic;
-	margin: 0;
-	line-height: normal;
-	padding: 13px 15px 10px;
-	border-bottom: 5px solid #0054a6;
-	text-transform: none;
-	border-width: 0 0 5px;
-	max-width: 100%;
-	width: 100%;
+    font-weight: bold;
+    color: #fff;
+    font-style: italic;
+    margin: 0;
+    line-height: normal;
+    padding: 13px 15px 10px;
+    border-bottom: 5px solid #fff;
+    text-transform: none;
+    border-width: 0 0 5px;
+    max-width: 100%;
+    width: 100%;
+    background-color: #1961ab;
 }
 .dvcbvh .portlet-title:before {
 	display: none;
