--- a/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
+++ b/modules/frontend-web-dossier/src/main/resources/META-INF/resources/css/main.css
@@ -102,3 +102,30 @@ body .thongTinDoanhNghiepTable__class table.table th:nth-child(7) {
   width: 100px;
   padding: 8px;
 }
+body .navigation-drawer  .list--group__header--active {
+    font-size: 14px;
+    font-weight: bold;
+  background: -moz-linear-gradient(left, #ffeaa0 0%, rgba(246,246,246,0) 100%); /* FF3.6-15 */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ffeaa0), color-stop(100%,rgba(246,246,246,0))); /* Chrome4-9,Safari4-5 */
+  background: -webkit-linear-gradient(left, #ffeaa0) 0%,rgba(246,246,246,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(left, #ffeaa0 0%,rgba(246,246,246,0) 100%); /* Opera 11.10-11.50 */
+  background: -ms-linear-gradient(left, #ffeaa0 0%,rgba(246,246,246,0) 100%); /* IE10 preview */
+  background: linear-gradient(to right, #ffeaa0 0%,rgba(246,246,246,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffeaa0', endColorstr='#00f6f6f6',GradientType=1 ); /* IE6-9 */
+}
+
+#tab-dossier-detail-2 .tabs__item--active > button {
+  color: yellow;
+  position: relative;
+}
+
+#tab-dossier-detail-2 .tabs__item--active > button:after {
+    content: "";
+    position: absolute;
+    bottom: -13px;
+    left: 0;
+    background-color: white;
+    width: 100%;
+    height: 10px;
+}
+
