--- a/modules/frontend-web-employee/src/main/resources/templates/header.html
+++ b/modules/frontend-web-employee/src/main/resources/templates/header.html
@@ -6,22 +6,28 @@
 
 	<!-- library -->
 	<link rel="stylesheet" href="../../../../../../style-component/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/custom.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/style-components.css">
 	<link rel="stylesheet" href="../../../../../../style-component/css/kendo.common.core.min.css">
 	<link rel="stylesheet" href="../../../../../../style-component/css/override-kendoui.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/bootstrap-datepicker.min.css">
 	<script src="../../../../../../style-component/js/jquery-1.11.3.js"></script>
 	<script src="../../../../../../style-component/js/bootstrap.min.js"></script>
 	<script src="../../../../../../style-component/js/kendo.ui.core.min.js"></script>
-	<script src="../../../../../../style-component/js/bootstrap-datepicker.min.js"></script>
+	<script src="../../../../../../style-component/js/jasny-bootstrap.min.js"></script>
+	<script src="../../../../../../style-component/js/custom.js"></script>
 
-	<!-- custom css, js -->
 	<link rel="stylesheet" href="../../../../../../style-component/css/modern_component.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/modern_custom.css">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
+	<link href="../../../../../../style-component/css/modern_custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../../../../../style-component/css/custom.css">
 
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+    <script src="http://v2.opencps.vn/o/backend-theme/js/handlebars.min.js"></script>
+	<script src="http://v2.opencps.vn/o/backend-theme/js/alpaca.min.js"></script>
+</head>
+<style type="text/css">
+	body {
+		font-size: 13px;
+	}
+</style>
 <body>
 	<header id="banner">
 		<div class="container align-middle">
