--- a/modules/frontend-web-customer/src/main/resources/templates/header.html
+++ b/modules/frontend-web-customer/src/main/resources/templates/header.html
@@ -3,27 +3,31 @@
 <head>
 	<meta charset="utf-8">
 	<title>Admin Theme</title>
-
 	<!-- library -->
-	<link rel="stylesheet" href="../../../../../../style-component/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/kendo.common.core.min.css">
-	<link rel="stylesheet" href="../../../../../../style-component/css/override-kendoui.css">
-	<script src="../../../../../../style-component/js/jquery-1.11.3.js"></script>
-	<script src="../../../../../../style-component/js/bootstrap.min.js"></script>
-	<script src="../../../../../../style-component/js/kendo.ui.core.min.js"></script>
-	<script src="../../../../../../style-component/js/jasny-bootstrap.min.js"></script>
-	<script src="../../../../../../style-component/js/custom.js"></script>
+    <link rel="stylesheet" href="../../../../../../style-component/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../../../../style-component/css/kendo.common.core.min.css">
+    <link rel="stylesheet" href="../../../../../../style-component/css/override-kendoui.css">
+    <script src="../../../../../../style-component/js/jquery-1.11.3.js"></script>
+    <script src="../../../../../../style-component/js/bootstrap.min.js"></script>
+    <script src="../../../../../../style-component/js/kendo.ui.core.min.js"></script>
+    <script src="../../../../../../style-component/js/jasny-bootstrap.min.js"></script>
+    <script src="../../../../../../style-component/js/custom.js"></script>
 
-	<link rel="stylesheet" href="../../../../../../style-component/css/modern_component.css">
-	<link href="../../../../../../style-component/css/modern_custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../../../../style-component/css/modern_component.css">
+    <link href="../../../../../../style-component/css/modern_custom.css" rel="stylesheet">
     <link rel="stylesheet" href="../../../../../../../style-component/css/custom.css">
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
     <script src="http://v2.opencps.vn/o/backend-theme/js/handlebars.min.js"></script>
-	<script src="http://v2.opencps.vn/o/backend-theme/js/alpaca.min.js"></script>
+    <script src="http://v2.opencps.vn/o/backend-theme/js/alpaca.min.js"></script>
 </head>
 <body>
+    <style type="text/css">
+        body {
+            font-size: 13px;
+        }
+    </style>
 	<header id="banner">
 		<div class="container-fluid align-middle">
 			<div class="logo align-middle">
