--- a/wars/parent-opencps-theme/src/main/webapp/css/_custom.scss
+++ b/wars/parent-opencps-theme/src/main/webapp/css/_custom.scss
@@ -25,3 +25,10 @@ body .navbar-default .navbar-nav > .active > a:hover,
 body .navbar-default .navbar-nav > .active > a:focus {
 	background-color: transparent;
 }
+
+#navigation .nav.navbar-nav img {
+    width: 12px;
+    margin-right: 5px;
+    height: 12px;
+    margin-top: -4px;
+}
