--- a/wars/parent-opencps-vue/src/main/webapp/css/clay.css
+++ b/wars/parent-opencps-vue/src/main/webapp/css/clay.css
@@ -25529,8 +25529,8 @@ a .icon-fb-decimal {
 
 @font-face {
     font-family: 'Glyphicons Halflings';
-    src: url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.eot);
-    src: url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.eot?#iefix) format("embedded-opentype"), url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.woff2) format("woff2"), url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.woff) format("woff"), url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.ttf) format("truetype"), url(compat/third_party/font_glyphicons/glyphicons-halflings-regular.svgglyphicons_halflingsregular) format("svg")
+    src: url('../fonts/glyphicons-halflings-regular.eot');
+  	src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
 .glyphicon {
